[package]
name = "proc_config_derive"
version = "0.1.0"
authors = ["Redblueflame <contact@redblueflame.com>"]
edition = "2018"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = {version = "1.0.64", features = ["extra-traits"]}
darling = "0.12.2"

[dev-dependencies]
toml = "0.5.8"
serde = "1.0.125"
trybuild = { version = "1.0", features = ["diff"] }